# digital-signage

./: .gitignore  .pre-commit-config.yaml  BUGS_AND_IMPROVEMENTS.md  CI_CD_OPTIMIZATION_SUMMARY.md  CODEBASE_ANALYSIS_AND_IMPROVEMENTS.md  CODE_FIXES_SUMMARY.md  CODE_IMPROVEMENT_REPORT.md  CODE_REVIEW_REPORT.md  DEPLOYMENT_GUIDE_ROCPI4B.md  DEVICE_LIFECYCLE_REVIEW.md  IMPLEMENTATION_IMPROVEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_SUMMARY.md  Makefile  README.md  SCENARIOS.md  install.sh  monitor-github-actions.py  pyproject.toml  requirements.txt  run_tests.py  scenarios.md  setup-dev.sh  setup-rockpi4b.sh  setup.py  soc_info.py  test_security_implementation.py  validate_remaining_implementations.py  validate_tests.py  verify_rockpi4b.py
.github/: CI_CD_REFERENCE.md  SETUP_CI_CD.md
.github/workflows/: ci-optimized.yml  esp32-rockpi-integration.yml  monthly-tests.yml  optimized-ci.yml  pr-validation.yml  security-and-maintenance.yml
config/: unified_config.json
docs/: CODE_REVIEW_REPORT.md  ESP32_ROCKPI_DUAL_RUNNER_ARCHITECTURE.md  ESP32_ROCKPI_IMPLEMENTATION_SUMMARY.md  OS_DECISION_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE_FOR_DEBRIAN_ROCKPI_4B.md  YOCTO_IMPLEMENTATION_GUIDE_FOR_ROCKPI4B.md
docs/setup/: esp32-setup-guide.md
scripts/: verify_installation.py
src/: __init__.py  __main__.py
src/application/: __init__.py  background_task_manager.py  commands.py  dependency_injection.py  provisioning_coordinator.py  provisioning_orchestrator.py  service_manager.py  service_registrars.py  signal_handler.py  use_cases.py
src/common/: error_handling_patterns.py  result_handling.py  threading_coordination.py
src/domain/: __init__.py  configuration.py  configuration_factory.py  configuration_validator.py  errors.py  events.py  soc_registry.py  soc_specifications.py  specifications.py  state.py  validation.py
src/domain/soc/: __init__.py  base_types.py
src/infrastructure/: __init__.py  bluetooth.py  configuration.py  configuration_service.py  device.py  display.py  dynamic_gpio.py  factory_reset.py  gpio_new.py  hardware_abstraction.py  health.py  logging.py  network.py  ownership.py  performance.py  security.py
src/infrastructure/bluetooth/: __init__.py  advertising.py  base.py  recovery.py  service.py
src/infrastructure/device/: __init__.py  detector.py  info_provider.py
src/infrastructure/display/: __init__.py  qr_generator.py
src/infrastructure/security/: __init__.py  encryption.py  service.py  session_manager.py
src/infrastructure/testing/: __init__.py  hardware_adapters.py
src/interfaces/: __init__.py  segregated_interfaces.py
tests/: README.md  __init__.py  conftest.py  demo_integrated_improvements.py  standalone_qr_test.py  test_background_task_manager.py  test_doubles.py  test_soc_extensibility.py  validate_critical_fixes.py  validate_fixes_simple.py
tests/error_recovery/: test_error_recovery.py
tests/factory_reset/: test_factory_reset.py
tests/first_time_setup/: test_first_time_setup.py
tests/integration/: test_adapters.py  test_end_to_end_provisioning.py  test_qr_code_integration.py
tests/normal_operation/: test_normal_operation.py
tests/security_validation/: test_security_encryption.py  test_security_validation.py
tests/utils/: test_utils.py
